--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,7 +10,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script type="text/javascript">
       function insertServer(){
-        var API_SERVER = "http://mcstat.sol4it.de/api/";
+        var API_SERVER = "https://mcstat.sol4it.de/api/";
         document.getElementById("submitB").setAttribute("disabled",true);
         var ip = document.getElementById("ipInput").value;
         var port = document.getElementById("portInput").value;
