ADDED DEMO PAGE

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -90,6 +90,8 @@
         - The first argument has to be an callback, which will get 2 arguments passed. 1: An Error object, if an error occured, 2: The Server-Info as a regular object<br><br/>
 
         <b>Pleas note:</b>  The table and Charts are meant to be styled by YOU. The table got it's own classNames and stuff. Use CSS to style it like you want.
+        <br/><br/>
+        <h5>DEMO PAGE: <a href="http://sol4it.de/mcstat/demo.html" target="_blank">DEMO FOR grandtheft.mcpe.me</a></h5>
         <br/><br/><br/>
         <h4>API DOCUMENTATION WILL FOLLOW SOON...</h4><br/><br/>
       </div>
