--- a/test-inject.html
+++ b/test-inject.html
@@ -6,7 +6,7 @@
 mcstats.makeTable("test","month",10,null,null,function(err){
     console.log("#",err)
 });
-mcstats.makeChart("chart","hour",function(err){
+mcstats.makeChart("chart","week",function(err){
     console.log("#",err)
 });
 </script>
